--- a/services.html
+++ b/services.html
@@ -30,7 +30,7 @@
     <main class="servicetext">
       <h2>Services</h2>
       <p>Joe the Plumber provides a wide range of services for residential and commercial customers. Customer satisfaction is 100% guaranteed because our employees are dedicated to always doing the best possible job. Our hiring and training practices ensure that each Joe-the-Plumber technician is an expert in the field and is courteous and trustworthy.</p>
-      <p>We pride ourselves on being up-to-date with the latest in technology and building code requirements. Since 2003, we have been a local leader in Solar Thermal Energy Systems. <a href="contact.html">Give us a call.</a> We would be proud to be of service. One call does it all!</p>
+      <p>We pride ourselves on being up-to-date with the latest in technology and building code requirements. Since 2003, we have been a local leader in Solar Thermal Energy Systems. Give us a call. We would be proud to be of service. One call does it all!</p>
     </main>
     <section class="services">
       <img class="joepicture" src="joepicture.png" alt="Picture of Joe the Plumber">
