--- a/solar.html
+++ b/solar.html
@@ -40,7 +40,7 @@
     </main>
     <aside>
       <h2>Services</h2>
-        <ul>
+        <ul class="listservices">
         <li><a href="plumbing.html">Plumbing</a></li>
         
         <li><a href="heating.html">Heating</a></li>
